2022-11-05T08:24:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3399349166 # 200
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 72 214 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 72 214 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-22]

2022-11-05T01:51:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3398226472 # 199
* notice: last 14d: unq all: 4 28
* notice: prev accum: outdated-unq outdated-all / unq all: 70 210 / 87 240
* notice: next accum: outdated-unq outdated-all / unq all: 72 214 / 87 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-21] / []

2022-11-04T16:28:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3395448710 # 198
* notice: last 14d: unq all: 5 30
* notice: prev accum: outdated-unq outdated-all / unq all: 70 210 / 87 241
* notice: next accum: outdated-unq outdated-all / unq all: 70 210 / 87 240
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -0 -2 / 2 2
* notice: removed / changed dates: [] / [2022-10-21]

2022-11-04T01:59:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3390674737 # 196
* notice: last 14d: unq all: 5 31
* notice: prev accum: outdated-unq outdated-all / unq all: 70 210 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 70 210 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -0 -1 / 2 3
* notice: removed / changed dates: [] / [2022-10-21]

2022-11-03T16:30:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3387469660 # 195