@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-05T08:24:07Z",
-  "count_outdated" : 214,
-  "uniques_outdated" : 72,
-  "count" : 241,
+  "timestamp" : "2022-11-06T01:54:27Z",
+  "count_outdated" : 216,
+  "uniques_outdated" : 73,
+  "count" : 242,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-10-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-23T00:00:00Z",
       "count": 1,
